bug(fix) LERGO-677 admin homepage -sub menu of publish to be visible, fix width of abuse dropdown and remove hover dropdown on abuse and pubish. ALSO embed: remove navbar and make desktop size (not xs)

--- a/app/styles/_admin.scss
+++ b/app/styles/_admin.scss
@@ -37,4 +37,15 @@
         }
     }
 }
+@media screen and ( max-width : 768px ) {
+    .rtl {
+        .admin {
+            .admin-publish {
+                .dropdown-menu {
+                    margin-left: -110px;
+                }
+            }
+        }
+    }
+}
 
